--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,14 +9,40 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <style>
         .container {
-            margin: 100px 0 0 0;
+            margin: 1rem auto;
         }
         .btn-primary {
-            margin: 0 0 0 10px;
+            margin: 1rem;
         }
+        input{
+            border-radius: .5rem;
+            padding: .5rem;
+            ::placeholder{
+                color:rgb(11, 94, 215);
+            } 
+        }
+        .result {
+    color:rgb(11, 94, 215);  
+    border: 1px solid #000;  
+    padding: 10px;  
+    width: 80%;  
+    margin: 0 auto;  
+    box-sizing: border-box;  
+    border-radius: .5rem;
+}
+h1{
+    color:rgb(11, 94, 215);
+}
+
     </style>
 </head>
 <body>
+    <header>
+        <h1 style="text-align: center ;margin: 1rem"><i>NationalizeAPI.com</i></h1>
+    </header>
+    <main>
+        <div class=" Result: "></div>
+    </main>
     
 </body>
 <script src="script.js"></script>
